atualização do texto no arquivo index.html

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         Vamos fazer isso mais uma vez!<br />
       </p>
       <p>
-        Ficaremos felizes em compartilhar com você o dia mais especial de nossas
-        vidas: <br />
+        Ficaremos felizes em compartilhar com você um dos dias mais especiais de
+        nossas vidas: <br />
         O nosso casamento!
       </p>
       <br />
