nova atualização alinhamento

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
     <div class="container1">
       <p>
-        <br />
         "O amor tudo sofre, tudo crê, tudo espera, tudo suporta. <br />(I Cor
         13:7)"
       </p>
@@ -25,17 +24,17 @@
       <p>
         Ficaremos felizes em compartilhar com você um dos dias mais especiais de
         nossas vidas: <br />
-        O nosso casamento!
+        O nosso casamento! <br />
       </p>
+
       <p class="data">27 de Março de 2022</p>
       <br />
     </div>
-
+    <br />
     <div class="container">
-      <br />
       <button class="botao botao1">
         <a class="bt" href="https://www.casamentos.com.br/web/karen-and-renan"
-          >Clique para confirmar sua presença</a
+          >Clique aqui para confirmar sua presença</a
         >
       </button>
     </div>
