realizado alterações nos arquivos

--- a/index.html
+++ b/index.html
@@ -24,14 +24,9 @@
                 O nosso casamento! <br />
 
                 <div class="quando-onde">
-
-            <p> Irá acontecer em:</p>
-            <p class="data">27 de Março de 2022 às 16h00.</p>         
-          
-            
-
-                <p>Local: <br>
-                <a class="local" href="https://goo.gl/maps/Q4SGuyHQDaZJQVgP8">Rua Marco Polo, 1970 - Parque Boturussu - São Paulo - SP</a></p> 
+                 <p class="data">27 de Março de 2022 às 16h00.</p>         
+                 <p>Local: <a class="local" href="https://goo.gl/maps/Q4SGuyHQDaZJQVgP8"> <strong>Rua Marco Polo, 1970<br>
+                  Parque Boturussu - São Paulo - SP</strong></a></p>  
           </div>
           <div class="confirmar-pres">
                 <p>Confirme sua presença até 15 de fevereiro <br> clicando no botão abaixo: </p>
