atualizado link no arquivo index.html

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 
                 <div class="quando-onde">
                  <p class="data">27 de Março de 2022 às 16h00.</p>         
-                 <p>Local: <a class="local" href="https://goo.gl/maps/Q4SGuyHQDaZJQVgP8"> <strong>Rua Marco Polo, 1970<br>
+                 <p>Local: <a class="local" href="https://goo.gl/maps/8UVSJ9AkctFTyVz6A" target="_blank"> <strong>Rua Marco Polo, 1970<br>
                   Parque Boturussu - São Paulo - SP</strong></a></p>  
           </div>
           <div class="confirmar-pres">
                 <p>Confirme sua presença até 15 de fevereiro <br> clicando no botão abaixo: </p>
 
-                <button class="botao botao1"><a class="bt" href="https://www.casamentos.com.br/web/karen-and-renan/confirmeasuapresenca-3#scrollMobile">Confirmar presença ♥</a></button>
+                <button class="botao botao1"><a class="bt" href="https://www.casamentos.com.br/web/karen-and-renan/confirmeasuapresenca-3#scrollMobile" target="_blank">Confirmar presença ♥</a></button>
 </div>
         </div>
         <footer>
