atualizado endereço e botão do mesmo

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
                 <div class="quando-onde">
                  <p class="data">27 de Março de 2022 às 16h00.</p>         
-                 <p>Local: <br> <button class="button button1"><a class="local" href="https://goo.gl/maps/8UVSJ9AkctFTyVz6A" target="_blank">Estr. Marco Polo, 1970 <br>
-                  Batistini - São Bernardo do Campo - SP</a></button></p>  
+                 <p> <button class="button button1"><a class="local" href="https://goo.gl/maps/8UVSJ9AkctFTyVz6A" target="_blank">Estr. Marco Polo, 1970 -
+                  Batistini  São Bernardo do Campo - SP</a></button></p>  
           </div>
           <div class="confirmar-pres">
                 <p>Confirme sua presença até<br> 15 de fevereiro, <br> clicando no botão abaixo: </p>
